2005-08-23  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX::STREAM-OPTIONS): implemented
	* modules/syscalls/posix.lisp (POSIX::STREAM-OPTIONS): export

2005-08-22  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (print-tables-1): *_to_list():
	when c_const is 0, do not put l_const into the list

2005-08-22  Sam Steingold  <sds@gnu.org>

	* makemake.in: issue a warning on --with-module=base-module

2005-08-22  Sam Steingold  <sds@gnu.org>

	* modules/regexp/regcomp.c, modules/regexp/regex.h:
	* modules/regexp/regex_internal.c, modules/regexp/regex_internal.h:
	* modules/regexp/regexec.c, m4/regex.m4: sync with gnulib

2005-08-19  Sam Steingold  <sds@gnu.org>

	* stream.d (stream_lend_handle): propagate up the possible change
	in the first argument coming from check_value()
	* lispbibl.d (stream_lend_handle): updated the declaration
	* pathname.d (init_launch_streamarg):
	updated the call to stream_lend_handle()
	* modules/syscalls/calls.c (stream_get_handle): propagate up the
	possible change in the first argument coming from stream_lend_handle()
	(error_OS_stream): new function
	(STREAM-LOCK): use it
	(SYNC): use stream_get_handle()
	(FILE-STAT): updated call to stream_get_handle()
	(copy_attributes_and_close, copy_file_low):
	updated call to stream_lend_handle()

2005-08-18  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (attribute_aligned_object): use "#define" instead of
	a constant variable declaration "const char*" for gen.lispbibl.c

2005-08-18  Sam Steingold  <sds@gnu.org>

	* makemake.in (PROC): handle OpenBSD 3.4 where `uname -p` prints
	"Intel Pentium III (Coppermine) ("GenuineIntel" 686-class)"

2005-08-18  Sam Steingold  <sds@gnu.org>

	* spvw.d (libopen) [!WIN32_NATIVE]: pass RTLD_GLOBAL to dlopen()

2005-08-18  John Hinsdale <hin@alma.com>

	* modules/oracle/orafns.c, oracle.lisp: handle floats as double
	precision by default; allow multiple connects to the same
	server via connection IDs

2005-08-18  Sam Steingold  <sds@gnu.org>
